# penname

./: .gitattributes  .gitignore  CLAUDE.md  DESIGN.md  LICENSE  NOTICE  README.md  pyproject.toml  theme.css  tokens.json  variables.css
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
.impeccable/critique/: 2026-07-22T10-51-15Z__penname-gui.md
brand/: README.md  how-penname-works.html  penname.icns
packaging/: build_app.sh  entry_gui.py  penname.iss  penname.spec
penname/: __init__.py  __main__.py
penname/cli/: main.py
penname/core/: engine.py  labels.py  types.py
penname/core/detect/: base.py  composite_detector.py  crm_templates.py  factory.py  gliner_detector.py  gliner_model.py  noise_filter.py  noise_words.txt  presidio_detector.py  sector_recognizers.py
penname/core/detect/crm_templates/: bloomerang.json  donorperfect.json  little_green_light.json  raisers_edge_nxt.json  salesforce_npsp.json
penname/core/io/: csv_io.py  dispatch.py  docx_io.py  limits.py  markdown.py  pdf_io.py  text.py  xlsx_io.py
penname/core/mapping/: crypto.py  keychain.py  store.py
penname/core/replace/: applier.py  generator.py
penname/gui/: app.py  assets.py  flow.py  labels.py  models.py  qt_env.py  widgets.py
penname/gui/theme/: qss.py  tokens.py
penname/gui/views/: about_view.py  export_view.py  open_view.py  reverse_view.py  review_view.py
penname/mcp/: config.py  server.py  tools.py
tests/: conftest.py  test_branding.py  test_cli.py  test_consistency.py  test_crm_templates.py  test_csv_round_trip.py  test_docx_round_trip.py  test_gliner_detection.py  test_gui_flow.py  test_gui_review.py  test_mapping_encryption.py  test_markdown_export.py  test_mcp_server.py  test_noise_filter.py  test_pdf_extraction.py  test_review_controls.py  test_round_trip.py  test_sector_recognizers.py  test_security.py  test_xlsx_round_trip.py
tests/fixtures/: acknowledgment_3.txt  donor_letter_1.txt  donor_notes_2.txt  donors.csv
