[project]
name = "penname"
version = "0.1.0"
description = "Gives sensitive values in donor documents a pen name before you share them with an LLM, then restores the real values afterwards. Runs entirely on your machine."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
    "presidio-analyzer>=2.2.355",
    "spacy>=3.8,<3.9",
    "en-core-web-lg",
    "faker>=30",
    "cryptography>=43",
    "keyring>=25",
    "openpyxl>=3.1.5",
    "python-docx>=1.2.0",
]

[project.scripts]
penname = "penname.cli.main:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
]

[tool.uv.sources]
en-core-web-lg = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.8.0/en_core_web_lg-3.8.0-py3-none-any.whl" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["penname"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["penname"]
