[project]
name = "penname"
version = "2.0.3"
description = "A free, open-source tool for nonprofits by Philanthropel. Gives sensitive values in donor documents a pen name before you share them with an AI assistant, then restores the real values afterwards. Runs entirely on your machine."
readme = "README.md"
license = "Apache-2.0"
authors = [{ name = "Philanthropel Limited" }]
requires-python = ">=3.11"
dependencies = [
    "presidio-analyzer>=2.2.355",
    "spacy>=3.8,<3.9",
    "en-core-web-lg",
    "faker>=30",
    "cryptography>=43",
    "keyring>=25",
    "openpyxl>=3.1.5",
    "python-docx>=1.2.0",
    "defusedxml>=0.7",  # explicit: hardens openpyxl XML parsing against XXE

    "pyside6>=6.11.1",
    "mcp>=1.28.1",
    "pypdf>=6.14.2",
]

# GLiNER is an optional higher-recall NER backend. It pulls torch + a model,
# so it is opt-in: the composite detector uses it when installed and falls back
# to Presidio+spaCy when it is not. Install with:  uv sync --extra gliner
[project.optional-dependencies]
gliner = ["gliner>=0.2.13"]

[project.scripts]
penname = "penname.cli.main:main"
penname-mcp = "penname.mcp.server:main"

[project.gui-scripts]
penname-gui = "penname.gui.app:main"

[dependency-groups]
dev = [
    "fpdf2>=2.8.7",
    "pyinstaller>=6.21.0",
    "pytest>=8",
    "pytest-cov>=5",
    "pytest-qt>=4.5.0",
]

[tool.uv.sources]
en-core-web-lg = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.8.0/en_core_web_lg-3.8.0-py3-none-any.whl" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["penname"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["penname"]
